# turing-protocol

./: .gitignore  ARCHITECTURE.md  BUSINESS_MODEL.md  CONTRIBUTING.md  LICENSE  Plan.md  README.md  SECURITY.md  SECURITY_REPORT.md  deploy_bot.py  discover_bots.py  find_bots_fast.py  label_bots.py  pyproject.toml  render.yaml  requirements.txt  train_master.py
.github/workflows/: ci.yml
contracts/: hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: HPSOracle.sol  (+2 more)
dashboard/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.js
data_pipeline/: DATASET_PROVENANCE.md  dataset_builder.py  feature_engineer.py  mantle_fetcher.py  preprocessing.py
ghost_agent/: .byreal  behavior_layer.py  ghost.py  main.py  strategy_layer.py
interrogator/: model.py  scorer.py  sybil_detector.py  trainer.py
oracle_service/: config.py  contracts.py  intelligence_aggregator.py  intelligence_router.py  main.py  pob_checker.py  retrainer.py  score_cache.py  score_loop.py  scores.db  sybil_router.py
realclaw_skill/: SKILL.md  __init__.py  cli.py  decision.py  http_server.py  nansen_overlay.py  narrative.py  resolver.py  skill.json
scorers/: dimension_scorer.py  interrogator.py
scripts/: check_connection.py  deploy_bot.py  fetch_real_wallets.py  generate_training_data.py  retrain_with_real_data.py  seed_live_data.py  smoke_test_endpoints.py  test_fetcher.py  test_wallet.py  train_model.py  verify_features.py
validation/: CONTRIBUTING_WALLETS.md  VALIDATION.md  _debug_false_negatives.py  run_validation.py  wallets.csv
(+61 files in other folders)
